<resources>
    <string name="app_name">FintechJunior</string>
    <string name="favourite">Избранное</string>
    <string name="popular">Популярные</string>
    <string name="name_ru">Название</string>
    <string name="year_example">2015</string>
    <string name="countries_example">Испания, Аргентина</string>
    <string name="bullet">\u2022</string>
    <string name="film_poster">film poster</string>
    <string name="genres_example">Фэнтези, Приключения</string>
    <string name="is_favourite">is favourite</string>
    <string name="description">description</string>
    <string name="genres">Жанры:\u0020</string>
    <string name="year">Год:\u0020</string>
    <string name="countries">Страны:\u0020</string>
    <string name="back_button">back button</string>
    <string name="try_again">Повторить</string>
    <string name="cannot_load_result">Ошибка загрузки</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="check_network_connection">Проверьте подключение к сети</string>
    <string name="search">Поиск</string>
    <string name="no_favourite_films">У вас нет любимых фильмов</string>
</resources>