<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/film_details"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/collapsingToolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true">
            <ImageView
                android:id="@+id/film_details_poster_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_anchorGravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"
                app:layout_collapseMode="parallax"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/film_details_title_tv"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/name_ru"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/film_details_description_tv"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/film_details_title_tv"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/film_details_genres"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/film_details_description_tv"
                android:text="@string/genres"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/film_details_genres_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/film_details_genres"
                android:layout_toEndOf="@+id/film_details_genres"
                tools:text="@string/genres_example" />

            <TextView
                android:id="@+id/film_details_year"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/film_details_genres"
                android:text="@string/year"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/film_details_year_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/film_details_year"
                android:layout_toEndOf="@+id/film_details_year"
                tools:text="@string/year_example"
                />

            <TextView
                android:id="@+id/film_details_country"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/film_details_year"
                android:text="@string/countries"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/film_details_country_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/countries_example"
                android:layout_alignTop="@+id/film_details_country"
                android:layout_toEndOf="@+id/film_details_country" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>